2008-07-24  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (xg_get_font_name): Cast w to GTK_FONT_SELECTION_DIALOG.
	(menu_nav_ended): Remove.
	(create_menus): Remove signal connect for menu_nav_ended.
	(xg_update_menubar): Also take deactivate_cb as parameter, pass it to
	create_menus.
	(xg_modify_menubar_widgets): Pass deactivate_cb to xg_update_menubar.

2008-07-23  Jason Rumney  <jasonr@gnu.org>

        * w32font.c (w32_enumfont_pattern_entity): Return height consistent
        with opened font.
        (w32font_open): Set font type to gdi.

        * w32uniscribe.c (uniscribe_open): Set font type to uniscribe.

2008-07-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* s/usg5-4.h (ADDR_CORRECT): Remove, unused.
	* unexaix.c (ADDR_CORRECT): Remove conditional, the only user
	defines it.
	* unexec.c (ADDR_CORRECT): Define unconditionally.

	* m/ibmrs6000.h (C_SWITCH_MACHINE): Remove.

	* unexec.c: Remove code depending on !COFF and USG, the file is
	not used for such systems.

	* s/netbsd.h (A_TEXT_OFFSET, A_TEXT_SEEK):
	* s/freebsd.h (A_TEXT_OFFSET, A_TEXT_SEEK): Remove, unused.
	(LD_SWITCH_SYSTEM_1): Remove, update users.

	* s/darwin.h (DATA_END):
	* m/intel386.h (DATA_END):
	* m/ibmrs6000.h (DATA_END):
	* m/alpha.h (DATA_END): Remove, unused.

	* config.in: Regenerate.
	* s/ms-w32.h (subprocesses): Define unconditionally.
	* s/template.h (subprocesses): Update comment.
	* s/vms.h (subprocesses):
	* s/usg5-4.h (subprocesses):
	* s/hpux10-20.h (subprocesses):
	* s/gnu-linux.h (subprocesses):
	* s/cygwin.h (subprocesses):
	* s/bsd-common.h (subprocesses):
	* s/aix4-2.h (subprocesses):
	* s/darwin.h (subprocesses): Do not define, defined by default now.

	* Makefile.in (C_SWITCH_SITE, LD_SWITCH_SITE): Remove, unused.
	Remove all references.
	(temacs): Add GNUStep specific ld flags.

	* nsterm.m (syms_of_nsterm): Provide ns, not ns-windowing,
	similarly to what X does.

2008-07-22  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfns.m (x-list-fonts): Remove.