@@ -1,3 +1,8 @@
+2008-07-24  Andreas Schwab  <schwab@suse.de>
+
+	* fileio.c (Finsert_file_contents): Properly adjust undo list
+	after format conversion.
+
 2008-07-24  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* gtkutil.c (xg_get_font_name): Cast w to GTK_FONT_SELECTION_DIALOG.
